# AdventOfCode2019

./: .clang-format  .gitignore  CMakeLists.txt  README.md  imgui.ini
app/: CMakeLists.txt  ImStandalone.cpp  ImStandalone.h  day1.h  launcher.cpp  main.cpp  vm.h
d1/: main.cpp
d10/: main.cpp
d11/: main.cpp
d12/: main.cpp
d13/: main.cpp
d14/: main.cpp
d2/: README.md  main.cpp
d3/: input.txt  main.cpp
d4/: main.cpp
d5/: main.cpp
d7/: com.cpp  main.cpp
d9/: main.cpp
lib/: CMakeLists.txt  ImStandalone.cpp  ImStandalone.h
lib/computer/: Base.h  Computer.h  Conditionals.h  Halt.h  IO.h  Instruction.h  Instructionset.h  Math.h
old/: .gitignore  README.md
old/d1/: main.cpp
old/d13/: main.cpp
old/d2/: main.cpp
old/d3/: main.cpp
old/d5/: main.cpp
old/d6/: main.cpp
old/d7/: main.cpp
old/d8/: main.cpp
old/lib/computer/: Base.h  Computer.h  Math.h
test/: main.cpp
