cmake_minimum_required(VERSION 3.10)

include_directories(lib/)
find_package(Curses REQUIRED)
include_directories(${CURSES_INCLUDE_DIR})

set(CMAKE_BUILD_TYPE Debug)

add_executable(d1.x d1/main.cpp)
add_executable(d2.x d2/main.cpp)
add_executable(d3.x d3/main.cpp)
add_executable(d4.x d4/main.cpp)
add_executable(d5.x d5/main.cpp)
add_executable(d6.x d6/main.cpp)
add_executable(d7.x d7/main.cpp)
add_executable(d8.x d8/main.cpp)
add_executable(d9.x d9/main.cpp)
add_executable(d10.x d10/main.cpp)
add_executable(d11.x d11/main.cpp)
add_executable(d12.x d12/main.cpp)
add_executable(d13.x d13/main.cpp)
target_link_libraries(d13.x ${CURSES_LIBRARIES})
add_executable(test.x test/main.cpp)
target_link_libraries(test.x ${CURSES_LIBRARIES})
